--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div-container">
+    <div id="sketchArea" class="div-container">
 
     </div>
 </body>
